--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
-bin_PROGRAMS = helloworld
-helloworld_SOURCES = main.c
+bin_PROGRAMS = blinker
+blinker_SOURCES = blinker.c
 AM_CFLAGS = -I/usr/local/include
 AM_LDFLAGS = -L /usr/local/lib/ -lwiringPi
