Rename application in makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
-bin_PROGRAMS = blinker
-blinker_SOURCES = blinker.c
+bin_PROGRAMS = cavycam
+blinker_SOURCES = cavycam.c
 AM_CFLAGS = -I/usr/local/include
 AM_LDFLAGS = -L /usr/local/lib/ -lwiringPi
