Move appname.txt to app.json

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ matrix:
 before_script:
   - cd src
   - sudo apt update -qq
-  - sudo apt install -y -qq git
-  - export APPLICATION_NAME=`cat appname.txt`
+  - sudo apt install -y -qq git jq
+  - 
+  - export APPLICATION_NAME=`jq '.app.name' app.json | sed 's/\"//g'`
   - export BUILD_RELEASE_VERSION=`git describe --tags`
   - export BUILD_PACKAGE_NAME=$APPLICATION_NAME-$BUILD_RELEASE_VERSION
   - export BUILD_PACKAGE_NAME_TGZ=$BUILD_PACKAGE_NAME.tgz
